# DisplayCluster

./: .travis.yml
CMake/: DisplayCluster.cmake  FindPackages.cmake  FindRequired.cmake
apps/DesktopStreamer/: CMakeLists.txt
apps/DesktopStreamer/src/: DesktopSelectionRectangle.cpp  DesktopSelectionRectangle.h  DesktopSelectionView.cpp  DesktopSelectionView.h  DesktopSelectionWindow.cpp  DesktopSelectionWindow.h  MainWindow.cpp  MainWindow.h  main.cpp
apps/DisplayCluster/: Application.cpp  Application.h  CMakeLists.txt  MasterApplication.cpp  MasterApplication.h  MasterWindow.cpp  MasterWindow.h  WallApplication.cpp  WallApplication.h  main.cpp
src/: CMakeLists.txt  Content.cpp  Content.h  DisplayGroupManager.cpp  DisplayGroupManager.h  LocalPixelStreamerManager.cpp  LocalPixelStreamerManager.h  MainWindow.cpp  MessageHeader.h  State.cpp  WebkitPixelStreamer.cpp  WebkitPixelStreamer.h  config.h.in
src/core/: BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  Content.cpp  Content.h  ContentFactory.cpp  ContentInteractionDelegate.cpp  ContentWindowGraphicsItem.cpp  ContentWindowGraphicsItem.h  ContentWindowInterface.cpp  ContentWindowInterface.h  ContentWindowManager.cpp  ContentWindowManager.h  ContentWindowRenderer.cpp  ContentWindowRenderer.h  DisplayGroupGraphicsScene.cpp  DisplayGroupGraphicsScene.h  DisplayGroupGraphicsView.cpp  DisplayGroupGraphicsView.h  DisplayGroupGraphicsViewProxy.cpp  DisplayGroupGraphicsViewProxy.h  DisplayGroupInterface.cpp  DisplayGroupInterface.h  DisplayGroupListWidgetProxy.cpp  DisplayGroupListWidgetProxy.h  DisplayGroupManager.cpp  DisplayGroupManager.h  DisplayGroupRenderer.cpp  DisplayGroupRenderer.h  DynamicTexture.cpp  DynamicTexture.h  DynamicTextureContent.cpp  DynamicTextureContent.h  FFMPEGMovie.cpp  FFMPEGMovie.h  FFMPEGVideoFrameConverter.cpp  FFMPEGVideoFrameConverter.h  Factories.cpp  Factories.h  Factory.hpp  (+75 more)
src/core/configuration/: Configuration.cpp  Configuration.h  MasterConfiguration.cpp  MasterConfiguration.h  WallConfiguration.cpp  WallConfiguration.h
src/core/gestures/: DoubleTapGestureRecognizer.h  PanGestureRecognizer.h  PinchGestureRecognizer.h
src/core/localstreamer/: DockPixelStreamer.h  Pictureflow.cpp  WebkitPixelStreamer.h
src/dcWebservice/: DefaultHandler.h
src/dcstream/: CMakeLists.txt  Socket.cpp  Stream.cpp  Stream.h  StreamPrivate.cpp  StreamSendWorker.cpp  StreamSendWorker.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt
tests/mock/: CMakeLists.txt  MockNetworkListener.h
tests/perf/: dcStreamTests.cpp
(+19 files in other folders)
